--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,55 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+
+.header {
+  width: 100%;
+  display: flex;
+}
+
+.nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  font-family: "Raleway";
+  position: absolute;
+  font-style: bold;
+  font-size: 26px;
+  vertical-align: top;
+  color: #000;
+  width: 145px;
+  height: 31px;
+  left: 215px;
+  top: 24px;
+  text-decoration: none;
+}
+
+.logo-style {
+  font-family: "Raleway";
+  font-style: bold;
+  font-size: 26px;
+  vertical-align: top;
+  color: #2196f3;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+.nav-link {
+  font-weight: 500;
+  font-size: 14px;
+  padding-right: 50px;
+}
+
+.nav-address {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+}
