--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,73 @@
 body {
   font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
-  width: 100%;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80px;
 }
 
 .nav {
-  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-
-.logo {
-  font-family: "Raleway";
-  position: absolute;
-  font-style: bold;
-  font-size: 26px;
-  vertical-align: top;
-  color: #000;
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 24px;
-  text-decoration: none;
 }
 
 .logo-style {
   font-family: "Raleway";
-  font-style: bold;
+  font-weight: bold;
   font-size: 26px;
-  vertical-align: top;
   color: #2196f3;
+  line-height: 100%;
+}
+
+.logo {
+  font-family: "Raleway";
+  font-weight: bold;
+  font-size: 26px;
+  text-decoration: none;
+  color: #000;
+  line-height: 100%;
 }
 
 .nav-list {
-  display: flex;
+  margin-left: 50px;
   list-style: none;
-  justify-content: center;
-}
-
-.nav-link {
+  display: flex;
+  color: #212121;
+  text-decoration: none;
   font-weight: 500;
   font-size: 14px;
-  padding-right: 50px;
+  line-height: 100%;
+}
+
+.nav-list li a {
+  color: #212121;
+  text-decoration: none;
+  display: block;
+  padding: 50px;
+}
+
+.nav-link:hover,
+.address-link:hover {
+  color: #2196f3;
 }
 
 .nav-address {
   display: flex;
   list-style: none;
-  justify-content: space-around;
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+}
+
+.nav-address li a {
+  color: #757575;
+  text-decoration: none;
+  display: block;
+  padding: 50px;
 }
