--- a/css/styles.css
+++ b/css/styles.css
@@ -95,4 +95,20 @@ body {
   font-weight: 900;
   font-size: 44px;
   text-transform: uppercase;
+  text-align: center;
+}
+
+.hero-button {
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-family: "Roboto";
+  font-weight: bold;
+  color: #fff;
+  font-size: 16px;
+  line-height: 160%;
+  width: 200px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
 }
