--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
+  letter-spacing: 0.06em;
 }
 
 /* Header */
@@ -54,11 +55,16 @@ body {
   color: #212121;
   text-decoration: none;
   display: block;
-  padding: 50px;
+  margin: 0 50px;
 }
 
 .nav-link:hover,
 .address-link:hover {
+  color: #2196f3;
+}
+
+.nav-link:focus,
+.address-link:focus {
   color: #2196f3;
 }
 
@@ -76,7 +82,7 @@ body {
   color: #757575;
   text-decoration: none;
   display: block;
-  padding: 50px;
+  margin: 0 50px;
 }
 
 /* /Header */
@@ -98,9 +104,12 @@ body {
   text-align: center;
 }
 
+.hero-head {
+  margin: 30px;
+}
+
 .hero-button {
   background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: "Roboto";
   font-weight: bold;
@@ -111,4 +120,88 @@ body {
   height: 50px;
   align-items: center;
   justify-content: center;
+  letter-spacing: 0.06em;
+}
+
+/* /Hero */
+
+/* Quality */
+
+.quality {
+  max-height: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.quality-card-title {
+  margin-top: 65px;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+
+.quality li {
+  display: block;
+  text-decoration: none;
+}
+
+.quality-title {
+  margin: 0;
+  padding: 0;
+  visibility: hidden;
+}
+
+.quality-info {
+  margin-bottom: 94px;
+  font-family: "Roboto";
+  font-size: 14px;
+  line-height: 146%;
+  color: #757575;
+  width: 270px;
+}
+
+/* /Quality */
+
+/* Work */
+
+.work-title {
+  display: flex;
+  justify-content: center;
+  font-family: "Roboto";
+  font-size: bold;
+  font-size: 36px;
+  line-height: 100%;
+  color: #212121;
+}
+
+.work-list {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 94px;
+}
+
+.work-list li {
+  display: block;
+  text-decoration: none;
+}
+
+/* /Work */
+
+/* Workers */
+
+.workers-title {
+  margin-top: 94px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  font-family: "Roboto";
+  font-style: bold;
+  font-size: 36px;
+  line-height: 100%;
+  color: #212121;
 }
