--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ body {
   text-decoration: none;
 }
 
-.quality-title {
+.hidden-title {
   margin: 0;
   padding: 0;
   visibility: hidden;
@@ -253,6 +253,115 @@ body {
 
 /* /Workers */
 
+/* Filter */
+
+.filter-btn {
+  margin-top: 65px;
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+.btn-list-all,
+.btn-list-web,
+.btn-list-app,
+.btn-list-design,
+.btn-list-marketing {
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 139%;
+}
+
+.btn-list-all {
+  width: 73px;
+  height: 38px;
+  margin-right: 8px;
+}
+
+.btn-list-web {
+  width: 128px;
+  height: 38px;
+  margin-right: 8px;
+}
+
+.btn-list-app {
+  width: 145px;
+  height: 38px;
+  margin-right: 8px;
+}
+
+.btn-list-design {
+  width: 103px;
+  height: 38px;
+  margin-right: 8px;
+}
+
+.btn-list-marketing {
+  width: 130px;
+  height: 38px;
+}
+
+.btn-list-all:hover,
+.btn-list-web:hover,
+.btn-list-app:hover,
+.btn-list-design:hover,
+.btn-list-marketing:hover {
+  background-color: #2196f3;
+  color: #fff;
+}
+
+.btn-list-all:focus,
+.btn-list-web:focus,
+.btn-list-app:focus,
+.btn-list-design:focus,
+.btn-list-marketing:focus {
+  background-color: #2196f3;
+  color: #fff;
+}
+
+/* /Filter */
+
+/* Box */
+
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.box-list {
+  box-sizing: border-box;
+  margin: 30px 30px;
+  height: 404px;
+  list-style: none;
+  border: 1px solid #eeeeee;
+}
+
+.box-title {
+  margin-left: 24px;
+  margin-bottom: 0px;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 171%;
+  color: #212121;
+}
+
+.box-info {
+  margin-left: 24px;
+  margin-top: 4px;
+  font-family: "Roboto";
+  font-size: 16px;
+  line-height: 160%;
+  color: #757575;
+}
+
+/* /Box */
+
 /* Footer */
 
 .footer {
@@ -305,3 +414,5 @@ body {
   font-size: 14px;
   line-height: 146%;
 }
+
+/* /Footer */
