--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,38 @@
 :root {
-  --primary-bg-color: #2f303a;
-  --accent-color: #2196f3;
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
-  --primary-white-color: #ffffff;
-  --btn-color: #f5f4f4;
+  --tittle-text-color: #ffffff;
+  --accent-color: #2196f3;
+  --primary-background-color: #ffffff;
+  --primary-section-color: #2f303a;
+  --secondary-section-color: #f5f4fa;
 }
 
 body {
-  background-color: var(--primary-white-color);
-  font-family: "Roboto";
-  font-size: 14px;
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
+  font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
 
 /* Header */
 
 .header {
-  background-color: var(--primary-white-color);
+  background-color: var(--primary-background-color);
 }
 
 .logo {
   color: var(--primary-text-color);
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
   line-height: 1.2;
   text-decoration: none;
 }
 
-.logo .style {
+.logo-style {
   color: var(--accent-color);
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
   line-height: 1.2;
@@ -41,7 +42,7 @@ body {
   list-style: none;
 }
 
-.list .link {
+.list-link {
   color: var(--primary-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -49,7 +50,7 @@ body {
   text-decoration: none;
 }
 
-.list .address {
+.list-address {
   color: var(--secondary-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -58,21 +59,24 @@ body {
   text-decoration: none;
 }
 
-.link:hover,
-.address:hover {
+.list-link:hover,
+.list-address:hover {
   color: var(--accent-color);
 }
 
-.link:focus,
-.address:focus {
+.list-link:focus,
+.list-address:focus {
   color: var(--accent-color);
 }
 
 /* Hero */
 
-.section .title {
-  background-color: var(--primary-bg-color);
-  color: var(--primary-white-color);
+.hero-section {
+  background-color: var(--primary-section-color);
+}
+
+.hero-title {
+  color: var(--tittle-text-color);
   font-size: 44px;
   font-weight: 900;
   line-height: 1.36;
@@ -84,12 +88,13 @@ body {
 
 .hero-btn {
   background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  color: var(--tittle-text-color);
   font-family: "Roboto";
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  border: 0;
   align-items: center;
   text-align: center;
   cursor: pointer;
@@ -100,18 +105,19 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.62;
+  border: 0;
   text-align: center;
   cursor: pointer;
 }
 
 .filter-btn:hover {
   background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  color: var(--tittle-text-color);
 }
 
 .filter-btn:focus {
   background-color: var(--accent-color);
-  color: var(--primary-white-color);
+  color: var(--tittle-text-color);
 }
 
 /* Specials */
@@ -129,14 +135,13 @@ body {
 
 .specials-text {
   color: var(--secondary-text-color);
-  font-weight: 400;
   line-height: 1.71;
 }
 
 /* Work & Workers */
 
 .section-workers {
-  background-color: #f5f4fa;
+  background-color: var(--secondary-section-color);
 }
 
 .section-title {
@@ -158,7 +163,6 @@ body {
 .worker-text {
   color: var(--secondary-text-color);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.18;
   text-align: center;
 }
@@ -176,30 +180,40 @@ body {
 .filter-text {
   color: var(--secondary-text-color);
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.87;
 }
 
 /* Footer */
 
 .footer {
-  background-color: var(--primary-bg-color);
+  background-color: var(--primary-section-color);
 }
 
-.footer .logo {
-  color: var(--primary-white-color);
+.footer-logo {
+  color: var(--tittle-text-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-decoration: none;
+}
+
+.footer-style {
+  color: var(--accent-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.2;
 }
 
 .address-text {
-  color: var(--primary-white-color);
-  font-weight: 400;
+  color: var(--tittle-text-color);
   line-height: 1.71;
   font-style: normal;
 }
 
 .footer-address {
   color: var(--secondary-text-color);
-  font-weight: 400;
   line-height: 1.71;
   font-style: normal;
   text-decoration: none;
