--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,10 @@ body {
   color: var(--accent-color);
 }
 
+.current {
+  color: var(--accent-color);
+}
+
 /* Hero */
 
 .hero-section {
@@ -92,7 +96,7 @@ body {
 .hero-btn {
   background-color: var(--accent-color);
   color: var(--tittle-text-color);
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
